--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
-<footer class="absolute bottom-0 left-0 flex justify-around items-center h-12 w-full bg-purple-600 bg-opacity-75">
-  <a class="text-white" href="https://www.theodinproject.com/" target="_blank" class="text-muted">The Odin Project</a>
-  <a class="text-white" href="https://github.com/joan-kii/only-members" target="_blank" class="text-muted">Github Repo</a>
-</footer>
-</body>
+    <footer class="absolute bottom-0 left-0 flex justify-around items-center h-16 w-full bg-gray-500">
+      <a class="text-yellow-300 font-bold" href="https://www.theodinproject.com/" target="_blank" class="text-muted">The Odin Project</a>
+      <a class="text-yellow-300 font-bold" href="https://github.com/joan-kii/only-members" target="_blank" class="text-muted">Github Repo</a>
+    </footer>
+  </body>
 </html>
