--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="text-gray-900 leading-tight">
   <head>
     <%- include('../partials/head'); %>
   </head>
-  <body>
-  <header class="h-12 w-full bg-purple-600 bg-opacity-75">
-    <nav class="w-100">
-    </nav>
-  </header>
+  <body class="min-h-screen bg-gray-200">
+    <header class="relative h-16 w-full flex items-center bg-gray-500">
+      <h1 class="ml-6 px-4 py-1 text-2xl font-bold text-yellow-300 hover:text-yellow-200 hover:border-yellow-100 hover:bg-gray-800 hover:bg-opacity-50 rounded ring ring-inset ring-yellow-200"><a href="/">Only Members</a></h1>
+      <nav class="absolute right-20 w-25">
+        <a href="/signup" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring ring-inset ring-yellow-200">Sign Up</a>
+        <a href="/login" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring ring-inset ring-yellow-200">Log In</a>
+        <button class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring ring-inset ring-yellow-200">Log Out</button>
+      </nav>
+    </header>
