--- a/views/pages/signup-form.ejs
+++ b/views/pages/signup-form.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header'); %>
-<main class="relative">
+<main class="relative flex-1">
   <div class="container mx-auto mt-20 mb-5 p-6 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200"">
     <form method="POST" action="">
       <div class="mb-3 flex flex-col items-center">
