--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,9 @@
 <%- include('../partials/header'); %>
 <main class="relative flex-1">
-  <div>
+  <div class="container mx-auto mt-20 mb-5 p-6 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
     <% if (currentUser) { %>
-      <p><%= currentUser %></p>
+      <h2><%= messageSuccess %></h2>
+      <p><%= currentUser.userName %></p>
     <% } else { %>
       <p>LOL</p>
     <% } %>
