--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,8 +2,7 @@
 <main class="relative flex-1">
   <div class="container mx-auto mt-20 mb-5 p-6 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
     <% if (currentUser) { %>
-      <h2><%= messageSuccess %></h2>
-      <p><%= currentUser.userName %></p>
+      <p><%= currentUser %></p>
     <% } else { %>
       <p>LOL</p>
     <% } %>
