añade render messages en home

--- a/views/pages/signup-form.ejs
+++ b/views/pages/signup-form.ejs
@@ -26,6 +26,12 @@
           <label for="confirmPassword" class="mb-3 block">Confirm Password</label>
           <input type="password" id="confirmPassword" name="confirmPassword" required class="mt-0 block w-full px-0.5 bg-gray-100 border-0 border-b-2 border-yellow-400 focus:outline-none focus:border-yellow-200">
         </div>
+
+        <!-- <div class="mb-12 w-3/4">
+          <label for="isAdmin" class="mb-3 block">Are you an Admin?</label>
+          <input type="checkbox" id="confirmPassword" name="confirmPassword" required class="mt-0 block w-full px-0.5 bg-gray-100 border-0 border-b-2 border-yellow-400 focus:outline-none focus:border-yellow-200">
+        </div> -->
+        
         <div class="relative mb-12 w-3/4">
           <button type="submit" class="absolute ml-4 py-2 px-4 right-0 font-bold text-gray-500 bg-yellow-300 hover:bg-opacity-60 hover:text-gray-600 hover:border-gray-600 rounded ring-2 ring-inset ring-gray-500">Sign Up</button>
         </div>
