--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,24 @@
 <%- include('../partials/header'); %>
 <main class="relative flex-1">
-  <div class="container mx-auto mt-20 mb-5 p-6 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
-    <% if (currentUser) { %>
-      <p><%= currentUser %></p>
-    <% } else { %>
-      <p>LOL</p>
-    <% } %>
-  </div>
+  <% for (message of messages) { %>
+    <div class="container mx-auto mt-20 mb-5 p-8 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
+      <h2 class="mb-3 font-bold text-center text-xl text-yellow-400"><%= message.title %></h2>
+      <p class="ml-10 mb-5 text-gray-700"><%= message.message %></p>
+        <div class="flex justify-around">
+          <p class="text-yellow-400">Author: <% if (currentUser) { %>
+            <span class="text-gray-700"><%= message.author %></span>
+          <% } else { %>
+            <span class="text-gray-700">Private</span>
+          <% } %>
+          </p>
+          <p class="text-yellow-400">Created At: <% if (currentUser) { %>
+            <span class="text-gray-700"><%= message.createdAt.toLocaleString() %></span>
+          <% } else { %>
+            <span class="text-gray-700">Private</span>
+          <% } %>
+          </p>
+        </div>
+    </div>
+  <% } %>
 </main>
 <%- include('../partials/footer'); %>
