--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-    <footer class="bottom-0 h-16 w-full flex justify-around items-center bg-gray-500">
+    <footer class="bottom-0 h-16 w-full flex flex-shrink-0 justify-around items-center bg-gray-500">
       <a class="text-yellow-300 font-bold" href="https://www.theodinproject.com/" target="_blank" class="text-muted">The Odin Project</a>
       <a class="text-yellow-300 font-bold" href="https://github.com/joan-kii/only-members" target="_blank" class="text-muted">Github Repo</a>
     </footer>
