--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,20 +4,25 @@
     <div class="container mx-auto mt-20 mb-5 p-8 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
       <h2 class="mb-3 font-bold text-center text-xl text-yellow-400"><%= message.title %></h2>
       <p class="ml-10 mb-5 text-gray-700"><%= message.message %></p>
-        <div class="flex justify-around">
-          <p class="text-yellow-400">Author: <% if (currentUser) { %>
+        <div class="mb-4 flex justify-around">
+          <p class="text-yellow-400">Author: <% if (currentUser?.status) { %>
             <span class="text-gray-700"><%= message.author %></span>
           <% } else { %>
             <span class="text-gray-700">Private</span>
           <% } %>
           </p>
-          <p class="text-yellow-400">Created At: <% if (currentUser) { %>
+          <p class="text-yellow-400">Created At: <% if (currentUser?.status) { %>
             <span class="text-gray-700"><%= message.createdAt.toLocaleString() %></span>
           <% } else { %>
             <span class="text-gray-700">Private</span>
           <% } %>
           </p>
         </div>
+        <% if (currentUser?.isAdmin) { %> 
+          <div class="w-100 flex justify-end">
+            <a href="/delete" class="mr-5 py-2 px-4 font-bold text-white bg-red-600 hover:bg-red-800 hover:bg-opacity-90 rounded ring-2 ring-inset ring-yellow-200">Delete</a>
+          </div>
+        <% } %>
     </div>
   <% } %>
 </main>
