--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header'); %>
 <main class="relative flex-1">
   <% for (message of messages) { %>
-    <div class="container mx-auto mt-20 mb-5 p-8 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
+    <div class="container mx-auto mt-20 mb-3 p-8 w-full md:w-3/4 lg:w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200">
       <h2 class="mb-3 font-bold text-center text-xl text-yellow-400"><%= message.title %></h2>
       <p class="ml-10 mb-5 text-gray-700"><%= message.message %></p>
         <div class="mb-4 flex justify-around">
@@ -19,9 +19,10 @@
           </p>
         </div>
         <% if (currentUser?.isAdmin) { %> 
-          <div class="w-100 flex justify-end">
-            <a href="/delete" class="mr-5 py-2 px-4 font-bold text-white bg-red-600 hover:bg-red-800 hover:bg-opacity-90 rounded ring-2 ring-inset ring-yellow-200">Delete</a>
-          </div>
+          <form action="/" method="POST" class="w-100 flex justify-end">
+            <input type="hidden" id="messageId" name="messageId" value="<%= message._id %>" required>
+            <button type="submit" class="mr-5 py-2 px-4 font-bold text-white bg-red-600 hover:bg-red-800 hover:bg-opacity-90 rounded ring-2 ring-inset ring-yellow-200">Delete</button>
+          </form>
         <% } %>
     </div>
   <% } %>
