--- a/views/pages/signup-form.ejs
+++ b/views/pages/signup-form.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header'); %>
 <main class="relative flex-1">
-  <div class="container mx-auto mt-20 mb-5 p-6 w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200"">
+  <div class="container mx-auto mt-20 mb-5 p-6 w-full md:w-3/4 lg:w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200"">
     <form method="POST" action="">
       <div class="mb-3 flex flex-col items-center text-gray-700">
         <h2 class="mb-3 font-bold text-xl text-yellow-400">
