--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,17 +5,18 @@
   </head>
   <body class="relative h-screen flex flex-col bg-gray-200">
     <header class="fixed top-0 h-16 z-10 w-full flex items-center bg-gray-500">
-      <h1 class="ml-6 px-4 py-1 text-2xl font-bold text-yellow-300 hover:text-yellow-200 hover:border-yellow-100 hover:bg-gray-800 hover:bg-opacity-50 rounded ring ring-inset ring-yellow-200"><a href="/">Only Members</a></h1>
-      <nav class="absolute right-20 w-25">
+      <h1 class="ml-6 px-4 py-1 hidden md:block text-2xl font-bold text-yellow-300 hover:text-yellow-200 hover:border-yellow-100 hover:bg-gray-800 hover:bg-opacity-50 rounded ring ring-inset ring-yellow-200"><a href="/">Only Members</a></h1>
+      <h1 class="ml-6 px-4 py-1 md:hidden text-2xl font-bold text-yellow-300 hover:text-yellow-200 hover:border-yellow-100 hover:bg-gray-800 hover:bg-opacity-50 rounded ring ring-inset ring-yellow-200"><a href="/">OM</a></h1>
+      <nav class="absolute right-5 md:right-20 w-25">
         <% if (currentUser) { %>
-          <a href="/message" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Write Message</a>
+          <a href="/message" class="ml-1 md:ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Write Message</a>
           <% if (currentUser?.status === false) { %> 
-            <a href="/membership" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Become a Member</a>
+            <a href="/membership" class="ml-1 md:ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Become a Member</a>
           <% } %>
-          <a href="/logout" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Log Out</a>
+          <a href="/logout" class="ml-1 md:ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Log Out</a>
         <% } else { %>
-          <a href="/signup" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Sign Up</a>
-          <a href="/login" class="ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Log In</a>
+          <a href="/signup" class="ml-1 md:ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Sign Up</a>
+          <a href="/login" class="ml-1 md:ml-4 py-2 px-4 font-bold text-yellow-300 bg-opacity-50 hover:bg-gray-800 hover:bg-opacity-50 hover:text-yellow-200 hover:border-yellow-100 rounded ring-2 ring-inset ring-yellow-200">Log In</a>
         <% } %>
       </nav>
     </header>
