--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,8 +1,7 @@
 <%- include('../partials/header'); %>
-<main class="relative flex-1">
+<main class="relative mt-20 flex-1">
   <% for (let message of messages) { %>
-
-    <div class="container transition duration-500 ease-in-out mx-auto mt-20 mb-3 p-8 w-full md:w-3/4 lg:w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200 transform hover:-translate-y-1 hover:scale-105">
+    <div class="container transition duration-500 ease-in-out mx-auto mb-3 p-8 w-full md:w-3/4 lg:w-2/4 bg-gray-100 shadow-2xl rounded ring ring-inset ring-yellow-200 transform hover:-translate-y-1 hover:scale-105">
       <h2 class="mb-3 font-bold text-center text-xl text-yellow-400"><%= message.title %></h2>
       <p class="ml-10 mb-5 text-gray-700"><%= message.message %></p>
         <div class="mb-4 flex justify-around">
